# phrike

./: .gitignore  ADAPTIVE_TIME_STEPPING_IMPLEMENTATION_REPORT.md  AGENTS.md  ARTIFICIAL_VISCOSITY_IMPLEMENTATION.md  CHANGELOG.md  CLUSTER_SETUP.md  DEDALUS_SOD_CHEBYSHEV_GUIDE.md  INSTALLATION.md  README.md  README_video_creation.md  SHU_OSHER_ANALYSIS_SUMMARY.md  SUMMARY.md  analyze_tgv3d.py  analyze_turb3d.py  analyze_turb3d_lpsse.py  athinput.rt2d  benchmark_tracers.py  check_cluster_modules.sh  check_initial_conditions.py  compare_chebyshev_legendre_grids.py  compare_spectra.py  create_comparison_video.py  create_tgv3d_animation.py  create_video_python.py  debug_frame_generation.py  debug_longer_run.py  debug_shu_osher.py  debug_solver.py  dedalus_sod_chebyshev.py  dedalus_sod_chebyshev_working.py  investigate_grid_distribution.py  kdv-burgers.py  khi2d.slurm  khi2d_dedalus.py  khi2d_gpu.yaml  mhd_plan.md  patch_solver_av.py  phrike2vid.py  plan.md  plot_rti_1d_comparison.py  (+39 more)
adaptive_1d_comparison_results/: adaptive_1d_comparison_report.txt
adaptive_comparison_results/: adaptive_comparison_report.txt
configs/: acoustic.yaml  acoustic1d.yaml  acoustic_legendre_dirichlet.yaml  acoustic_legendre_neumann.yaml  acoustic_legendre_parallel.yaml  acoustic_neumann.yaml  alfven1d.yaml  alfven3d.yaml  briowu.yaml  chebyshev_sod.yaml  chebyshev_sod_256.yaml  gaussian_center_fourier.yaml  gaussian_center_legendre.yaml  gaussian_collision.yaml  gaussian_mixed_bc.yaml  gaussian_modulated.yaml  gaussian_wave1d_test.yaml  gaussian_wave2d.yaml  gaussian_wave2d_angled_fourier.yaml  (+41 more)
(+756 files in other folders)
